Fixed default font and highcontrast font

--- a/apps/accessibility/css/fonthighcontrast.scss
+++ b/apps/accessibility/css/fonthighcontrast.scss
@@ -6,10 +6,19 @@
 		url('../../../core/fonts/OpenSans-Regular.woff') format('woff');
 }
 
+/* overriding default light */
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 300;
+	src: local('Open Sans'), local('OpenSans'),
+	url('../../../core/fonts/OpenSans-Regular.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 500;
 	src: local('Open Sans Semibold'), local('OpenSans-Semibold'),
 		url('../../../core/fonts/OpenSans-Semibold.woff') format('woff');
 }
@@ -22,3 +31,6 @@
 }
 
 $font-face: 'Open Sans', Frutiger, Calibri, 'Myriad Pro', Myriad, sans-serif;
+body {
+	font-weight: 400;
+}
