--- a/core/css/styles.scss
+++ b/core/css/styles.scss
@@ -84,7 +84,7 @@ ul {
 
 body {
 	background-color: var(--color-main-background);
-	font-weight: 400;
+	font-weight: 300;
 	font-size: .8em;
 	line-height: 1.6em;
 	font-family: var(--font-face);
